[package]
name = "fiber-wasi-polyfill"
version = "0.5.1"
edition = "2021"
keywords = ["fiber", "wasi", "wasi-polyfill"]
description = "The project provides polyfill implementation of *wasi_unstable* and *wasi_snapshot_preview1* functions using Fiber Syscalls."
license = "MIT"
repository = "https://github.com/wasm-forge/fiber-wasi-polyfill"

[dependencies]
#ic-cdk = "0.15.0"
#ic-stable-structures = "0.6.5"
#stable-fs = "0.5.1"
rand = "0.8.5"
function_name = "0.3.0"

[features]
#transient=[]
report_wasi_calls=[]
skip_unimplemented_functions=[]

[lib]
crate-type = ["staticlib", "lib"]

[dev-dependencies]
candid = "0.10.8"
#pocket-ic = "3.1"
